tests/NormalTests/paczka1/fuzzy1/46080145.err
Error in line 6: FUewNZc A671 57,1
Error in line 7: gJ3 S634 45,4
Error in line 13: gJ3 A936 4,7
Error in line 22: gJ3 A671 42,0
Error in line 28: A936 A936 88,4
